--- a/_config.yml
+++ b/_config.yml
@@ -1,93 +1,75 @@
 #page title
-page_title                                : Tilted Prism                                # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title: Tilted Prism # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id                                : 1669100114                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
-ios_app_country                           :                                           # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
+ios_app_id: 1669100114 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_country: # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
-appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
-                                                                                      # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
+appstore_link: # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+playstore_link: # Enter Google Play Store URL.
+presskit_download_link:# Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
+  # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Tilted Prism                                # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Split the bill with your friends quickly and easily.
+app_icon: assets/appicon.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_name: Tilted Prism # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_description: Split the bill with your friends quickly and easily.
 
-enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
-
-
+enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
 # Information About Yourself
-your_name                                 : Hugo Branco                                
-your_link                                 : https://hugobrancowb.github.io/                     
-your_city                                 : Brazil                                
-email_address                             : hugobrancowb@gmail.com
-facebook_username                         :                                           
-instagram_username                        : 
-github_username                           : hugobrancowb
-youtube_username                          : hugobranco
-
-
+your_name: Hugo Branco
+your_link: https://hugobrancowb.github.io/
+your_city: Brazil
+email_address: hugobrancowb@gmail.com
+facebook_username:
+instagram_username:
+github_username: hugobrancowb
+youtube_username: hugobranco
 
 # Feature List                            Edit, add or remove features to be presented.
-features                                  :
+features:
+  - title: Quick and easy
+    description: Easily split expenses between friends and family
+    fontawesome_icon_name: magic
 
-  - title                                 : Quick and easy
-    description                           : Easily split expenses between friends and family
-    fontawesome_icon_name                 : magic
-    
-  - title                                 : Simple steps
-    description                           : Simply add the name of each person splitting and assign the items consumed to each one of them.
-    fontawesome_icon_name                 : clock
+  - title: Simple steps
+    description: Simply add the name of each person splitting and assign the items consumed to each one of them.
+    fontawesome_icon_name: clock
 
-  - title                                 : Never do math at table again
-    description                           : Tilted Prism will automatically calculate each person's share and ease the process of payment.
-    fontawesome_icon_name                 : calculator
-
+  - title: Never do math at table again
+    description: Tilted Prism will automatically calculate each person's share and ease the process of payment.
+    fontawesome_icon_name: calculator
 
 # Theme Settings
-topbar_color                              : "#000000"
-topbar_transparency                       : 0.3
-topbar_title_color                        : "#ffffff"
+topbar_color: "#000000"
+topbar_transparency: 0.3
+topbar_title_color: "#ffffff"
 
-cover_image                               : # assets/headerimage.png                  # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#2ED173"
-cover_overlay_transparency                : 1
+cover_image: # assets/headerimage.png                  # Replace with alternative image path or image URL.
+cover_overlay_color: "#36618D"
+cover_overlay_transparency: 1
 
-device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
+device_color: black # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#ffffff"
+body_background_color: "#ffffff"
 
-link_color                                : "#1d63ea"
+link_color: "#36618D"
 
-app_title_color                           : "#ffffff"
-app_price_color                           : "#ffffff"
-app_description_color                     : "#ffffff"
+app_title_color: "#ffffff"
+app_price_color: "#ffffff"
+app_description_color: "#ffffff"
 
-feature_title_color                       : "#000000"
-feature_text_color                        : "#666666"
+feature_title_color: "#000000"
+feature_text_color: "#666666"
 
-feature_icons_foreground_color            : "#ffffff"
-feature_icons_background_color            : "#58B6DF"
+feature_icons_foreground_color: "#ffffff"
+feature_icons_background_color: "#36618D"
 
-social_icons_foreground_color             : "#666666"
-social_icons_background_color             : "#e6e6e6"
+social_icons_foreground_color: "#666666"
+social_icons_background_color: "#e6e6e6"
 
-footer_text_color                         : "#ffffff"
-
-
-
-
-
-
-
-
-
-
-
-
+footer_text_color: "#ffffff"
 
 ####################################################
 ### Jekyll Configuration. No need to touch this. ###
