--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title: Tilted Prism # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title: Game Diary # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id: 1669100114 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -11,9 +11,9 @@ appstore_link: # Automatically populates if not set and if iOS app ID is set. Ot
 # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon: assets/appicon.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name: Tilted Prism # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name: Game Diary # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description: Split the bill with your friends quickly and easily.
+app_description: Log your game journey.
 
 enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -29,17 +29,13 @@ youtube_username: hugobranco
 
 # Feature List                            Edit, add or remove features to be presented.
 features:
-  - title: Quick and easy
-    description: Easily split expenses between friends and family
-    fontawesome_icon_name: magic
+  - title: Log your game journey
+    description: Keep track of your game stash, playtime and wishlist.
+    fontawesome_icon_name: book
 
-  - title: Simple steps
-    description: Simply add the name of each person splitting and assign the items consumed to each one of them.
-    fontawesome_icon_name: clock
-
-  - title: Never do math at table again
-    description: Tilted Prism will automatically calculate each person's share and ease the process of payment.
-    fontawesome_icon_name: calculator
+  - title: Discover popular games
+    description: Find out what games are trending.
+    fontawesome_icon_name: fire
 
 # Theme Settings
 topbar_color: "#000000"
@@ -47,14 +43,14 @@ topbar_transparency: 0.3
 topbar_title_color: "#ffffff"
 
 cover_image: # assets/headerimage.png                  # Replace with alternative image path or image URL.
-cover_overlay_color: "#36618D"
+cover_overlay_color: "#6155F5"
 cover_overlay_transparency: 1
 
 device_color: black # Set to: blue, black, yellow, coral or white.
 
 body_background_color: "#ffffff"
 
-link_color: "#36618D"
+link_color: "#6155F5"
 
 app_title_color: "#ffffff"
 app_price_color: "#ffffff"
@@ -64,7 +60,7 @@ feature_title_color: "#000000"
 feature_text_color: "#666666"
 
 feature_icons_foreground_color: "#ffffff"
-feature_icons_background_color: "#36618D"
+feature_icons_background_color: "#6155F5"
 
 social_icons_foreground_color: "#666666"
 social_icons_background_color: "#e6e6e6"
@@ -77,7 +73,7 @@ footer_text_color: "#ffffff"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: compressed # You might prefer to minify using :compressed
 
 # Exclude these files from your production _site
 exclude:
