--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #page title
-page_title: Game Diary # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title: Delete Duplicates # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id: 6747587896 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id: 6752669737 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country: # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
 appstore_link: # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
@@ -11,9 +11,9 @@ appstore_link: # Automatically populates if not set and if iOS app ID is set. Ot
 # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon: assets/appicon.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name: Game Diary # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name: Delete Duplicates # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description: Log your game journey.
+app_description: Free space removing photos
 
 enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -28,14 +28,13 @@ github_username: hugobrancowb
 youtube_username: hugobranco
 
 # Feature List                            Edit, add or remove features to be presented.
-features:
-  - title: Log your game journey
-    description: Keep track of your game stash, playtime and wishlist.
-    fontawesome_icon_name: book
+# features:
+#   - title: Find duplicated photos
+#     description: Keep track of your game stash, playtime and wishlist.
 
-  - title: Discover popular games
-    description: Find out what games are trending.
-    fontawesome_icon_name: fire
+#   - title: Discover popular games
+#     description: Find out what games are trending.
+#     fontawesome_icon_name: fire
 
 # Theme Settings
 topbar_color: "#000000"
@@ -43,14 +42,14 @@ topbar_transparency: 0.3
 topbar_title_color: "#ffffff"
 
 cover_image: # assets/headerimage.png                  # Replace with alternative image path or image URL.
-cover_overlay_color: "#6155F5"
+cover_overlay_color: "#50D69A"
 cover_overlay_transparency: 1
 
 device_color: black # Set to: blue, black, yellow, coral or white.
 
 body_background_color: "#ffffff"
 
-link_color: "#6155F5"
+link_color: "#50D69A"
 
 app_title_color: "#ffffff"
 app_price_color: "#ffffff"
@@ -60,7 +59,7 @@ feature_title_color: "#000000"
 feature_text_color: "#666666"
 
 feature_icons_foreground_color: "#ffffff"
-feature_icons_background_color: "#6155F5"
+feature_icons_background_color: "#50D69A"
 
 social_icons_foreground_color: "#666666"
 social_icons_background_color: "#e6e6e6"
